# RlaT

./: BinaryOperationASTGeneration.md  CMakeLists.txt  CMakePresets.json  ProcessStructure.md  README.md  Tokenizing.md
src/RlaT/: RlaT_Data.cpp  RlaT_Data.h  RlaT_ProcessElement.cpp  RlaT_ProcessElement.h  RlaT_ProcessTree.cpp  RlaT_ProcessTree.h  RlaT_Script.cpp  RlaT_Script.h  RlaT_Token.cpp  RlaT_Token.h  RlaT_TokenPastProcessor.cpp  RlaT_TokenPastProcessor.h  RlaT_Tokenizer.cpp  RlaT_Tokenizer.h  RlaT_TypedValue.cpp  RlaT_TypedValue.h
src/testCode/: main.cpp
